overflow issued test

--- a/styles/_universal.scss
+++ b/styles/_universal.scss
@@ -23,6 +23,7 @@ h1 {
 
 body {
   background-color: $mainWhiteColor;
+  overflow-x: hidden;
 }
 
 h2 {
